Searching for Vulns in the Latest SBOM
